Fixed z-indexing issue with attribute buttons

--- a/src/WebComponents/Attributes/PersistentObjectAttributeKeyValueList/persistent-object-attribute-key-value-list.scss
+++ b/src/WebComponents/Attributes/PersistentObjectAttributeKeyValueList/persistent-object-attribute-key-value-list.scss
@@ -2,4 +2,8 @@
 
 :host {
     @include layout-horizontal();
+
+    vi-select {
+        border: none;
+    }
 }
